--- a/data_calling.ipynb
+++ b/data_calling.ipynb
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +448,7 @@
        "[106, 1839, 149, 540, None, 82, 45, 288, 90]"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -459,30 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'officers_df' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-107-e02a0c8de95e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mofficer_df\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m{\u001b[0m\u001b[1;34m\"Male Officers\"\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mmale\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"Female Officers\"\u001b[0m \u001b[1;33m:\u001b[0m \u001b[0mfemale\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mofficer_df\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"Total Number\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mofficer_df\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"Male Officers\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mofficer_df\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"Female Officers\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mofficers_df\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'officers_df' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "officer_df = pd.DataFrame({\"Male Officers\": male, \"Female Officers\" : female})\n",
-    "officer_df[\"Total Number\"]=officer_df[\"Male Officers\"]+officer_df[\"Female Officers\"]\n",
-    "officers_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -506,6 +483,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>ORI Code</th>\n",
        "      <th>Male Officers</th>\n",
        "      <th>Female Officers</th>\n",
        "      <th>Total Number</th>\n",
@@ -514,54 +492,245 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>MD0020100</td>\n",
        "      <td>106.0</td>\n",
        "      <td>13.0</td>\n",
        "      <td>119.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>MA0130100</td>\n",
        "      <td>1839.0</td>\n",
        "      <td>283.0</td>\n",
        "      <td>2122.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>MI3351900</td>\n",
        "      <td>149.0</td>\n",
        "      <td>39.0</td>\n",
        "      <td>188.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>MN0620900</td>\n",
        "      <td>540.0</td>\n",
        "      <td>91.0</td>\n",
        "      <td>631.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>MS0250100</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    ORI Code  Male Officers  Female Officers  Total Number\n",
+       "0  MD0020100          106.0             13.0         119.0\n",
+       "1  MA0130100         1839.0            283.0        2122.0\n",
+       "2  MI3351900          149.0             39.0         188.0\n",
+       "3  MN0620900          540.0             91.0         631.0\n",
+       "4  MS0250100            NaN              NaN           NaN"
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "officer_df = pd.DataFrame({\"ORI Code\": ori_list, \"Male Officers\": male, \"Female Officers\" : female})\n",
+    "officer_df[\"Total Number\"]=officer_df[\"Male Officers\"]+officer_df[\"Female Officers\"]\n",
+    "officer_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>State</th>\n",
+       "      <th>State Ab.</th>\n",
+       "      <th>State Capital</th>\n",
+       "      <th>Population</th>\n",
+       "      <th>ORI Code</th>\n",
+       "      <th>No. of Officers</th>\n",
+       "      <th>No. of (Offenses</th>\n",
+       "      <th>Simple Assault Cases</th>\n",
+       "      <th>Stolen Property Cases</th>\n",
+       "      <th>Rape Cases</th>\n",
+       "      <th>Male Officers</th>\n",
+       "      <th>Female Officers</th>\n",
+       "      <th>Total Number</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>MARYLAND</td>\n",
+       "      <td>MD</td>\n",
+       "      <td>Annapolis</td>\n",
+       "      <td>39,174</td>\n",
+       "      <td>MD0020100</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>162</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>106.0</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>119.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>MASSACHUSETTS</td>\n",
+       "      <td>MA</td>\n",
+       "      <td>Boston</td>\n",
+       "      <td>692,600</td>\n",
+       "      <td>MA0130100</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1612</td>\n",
+       "      <td>169</td>\n",
+       "      <td>43</td>\n",
+       "      <td>1839.0</td>\n",
+       "      <td>283.0</td>\n",
+       "      <td>2122.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>MICHIGAN</td>\n",
+       "      <td>MI</td>\n",
+       "      <td>Lansing</td>\n",
+       "      <td>118,210</td>\n",
+       "      <td>MI3351900</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>791</td>\n",
+       "      <td>22</td>\n",
+       "      <td>17</td>\n",
+       "      <td>149.0</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>188.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>MINNESOTA</td>\n",
+       "      <td>MN</td>\n",
+       "      <td>Saint Paul</td>\n",
+       "      <td>308,096</td>\n",
+       "      <td>MN0620900</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>984</td>\n",
+       "      <td>43</td>\n",
+       "      <td>16</td>\n",
+       "      <td>540.0</td>\n",
+       "      <td>91.0</td>\n",
+       "      <td>631.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>MISSISSIPPI</td>\n",
+       "      <td>MS</td>\n",
+       "      <td>Jackson</td>\n",
+       "      <td>160,628</td>\n",
+       "      <td>MS0250100</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>445</td>\n",
+       "      <td>106</td>\n",
+       "      <td>8</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
+       "      <td>MISSOURI</td>\n",
+       "      <td>MO</td>\n",
+       "      <td>Jefferson City</td>\n",
+       "      <td>42,838</td>\n",
+       "      <td>MO0260100</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>260</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
        "      <td>82.0</td>\n",
        "      <td>6.0</td>\n",
        "      <td>88.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
+       "      <td>MONTANA</td>\n",
+       "      <td>MT</td>\n",
+       "      <td>Helena</td>\n",
+       "      <td>32,315</td>\n",
+       "      <td>MT0250100</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>239</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
        "      <td>45.0</td>\n",
        "      <td>7.0</td>\n",
        "      <td>52.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
+       "      <td>NEBRASKA</td>\n",
+       "      <td>NE</td>\n",
+       "      <td>Lincoln</td>\n",
+       "      <td>289,102</td>\n",
+       "      <td>NB0550100</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1301</td>\n",
+       "      <td>55</td>\n",
+       "      <td>19</td>\n",
        "      <td>288.0</td>\n",
        "      <td>56.0</td>\n",
        "      <td>344.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
+       "      <td>NEVADA</td>\n",
+       "      <td>NV</td>\n",
+       "      <td>Carson City</td>\n",
+       "      <td>55,916</td>\n",
+       "      <td>NV0130000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>46</td>\n",
+       "      <td>17</td>\n",
+       "      <td>6</td>\n",
        "      <td>90.0</td>\n",
        "      <td>5.0</td>\n",
        "      <td>95.0</td>\n",
@@ -571,24 +740,60 @@
        "</div>"
       ],
       "text/plain": [
-       "   Male Officers  Female Officers  Total Number\n",
-       "0          106.0             13.0         119.0\n",
-       "1         1839.0            283.0        2122.0\n",
-       "2          149.0             39.0         188.0\n",
-       "3          540.0             91.0         631.0\n",
-       "4            NaN              NaN           NaN\n",
-       "5           82.0              6.0          88.0\n",
-       "6           45.0              7.0          52.0\n",
-       "7          288.0             56.0         344.0\n",
-       "8           90.0              5.0          95.0"
+       "           State State Ab.   State Capital Population   ORI Code  \\\n",
+       "0       MARYLAND        MD       Annapolis     39,174  MD0020100   \n",
+       "1  MASSACHUSETTS        MA          Boston    692,600  MA0130100   \n",
+       "2       MICHIGAN        MI         Lansing    118,210  MI3351900   \n",
+       "3      MINNESOTA        MN      Saint Paul    308,096  MN0620900   \n",
+       "4    MISSISSIPPI        MS         Jackson    160,628  MS0250100   \n",
+       "5       MISSOURI        MO  Jefferson City     42,838  MO0260100   \n",
+       "6        MONTANA        MT          Helena     32,315  MT0250100   \n",
+       "7       NEBRASKA        NE         Lincoln    289,102  NB0550100   \n",
+       "8         NEVADA        NV     Carson City     55,916  NV0130000   \n",
+       "\n",
+       "   No. of Officers  No. of (Offenses  Simple Assault Cases  \\\n",
+       "0              NaN               NaN                   162   \n",
+       "1              NaN               NaN                  1612   \n",
+       "2              NaN               NaN                   791   \n",
+       "3              NaN               NaN                   984   \n",
+       "4              NaN               NaN                   445   \n",
+       "5              NaN               NaN                   260   \n",
+       "6              NaN               NaN                   239   \n",
+       "7              NaN               NaN                  1301   \n",
+       "8              NaN               NaN                    46   \n",
+       "\n",
+       "   Stolen Property Cases  Rape Cases  Male Officers  Female Officers  \\\n",
+       "0                      3           5          106.0             13.0   \n",
+       "1                    169          43         1839.0            283.0   \n",
+       "2                     22          17          149.0             39.0   \n",
+       "3                     43          16          540.0             91.0   \n",
+       "4                    106           8            NaN              NaN   \n",
+       "5                      0           3           82.0              6.0   \n",
+       "6                      2           5           45.0              7.0   \n",
+       "7                     55          19          288.0             56.0   \n",
+       "8                     17           6           90.0              5.0   \n",
+       "\n",
+       "   Total Number  \n",
+       "0         119.0  \n",
+       "1        2122.0  \n",
+       "2         188.0  \n",
+       "3         631.0  \n",
+       "4           NaN  \n",
+       "5          88.0  \n",
+       "6          52.0  \n",
+       "7         344.0  \n",
+       "8          95.0  "
       ]
      },
-     "execution_count": 106,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "officer_merged_df = pd.merge(cases_merged_df, officer_df, on= \"ORI Code\")\n",
+    "officer_merged_df"
+   ]
   },
   {
    "cell_type": "code",
