--- a/data_calling.ipynb
+++ b/data_calling.ipynb
@@ -797,10 +797,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "officer_merged_df.to_csv(\"merged_dfs.csv\",\n",
+    "                  encoding=\"utf-8\", index=False, header=True)"
+   ]
   },
   {
    "cell_type": "code",
