--- a/scatter_plots.ipynb
+++ b/scatter_plots.ipynb
@@ -387,7 +387,7 @@
     }
    ],
    "source": [
-    "# Repeat plotting scatter and linear model for year versus aggravated assault\n",
+    "# Repeat plotting scatter and linear model for crime count vs school ratings\n",
     "crime_num = crime_data.iloc[0:49,10]\n",
     "school_rating = crime_data.iloc[0:49,11]\n",
     "\n",
