removed api key

--- a/data_calling.ipynb
+++ b/data_calling.ipynb
@@ -12,7 +12,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
-    "api_key = \"rA0vy4zNu4RpkIseRL4eccSlExzx2RMphwqHRUQo\""
+    "api_key = \"put api here\""
    ]
   },
   {
